# tplan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config-file.in.doxygen  library.json
control/: CMakeLists.txt  loop.cpp  loop.h  messageprocessor.cpp  messageprocessor.h  trj_loop.cpp
control/test/: CMakeLists.txt  test.cpp  test_loop.cpp  test_misc.cpp
design/Notebooks/: NewProtocol.ipynb  Trajectories.ipynb
design/Notebooks/.ipynb_checkpoints/: Equations-checkpoint.ipynb  JITTrajectory-checkpoint.ipynb  Trajectories-checkpoint.ipynb
host/: CMakeLists.txt  HostHardware.cpp  HostHardware.h  PacketSerial.cpp  PacketSerial.h
interface/: CMakeLists.txt  Hardware.cpp  Hardware.h  ihardware.h  imessageprocessor.h  ipacketserial.h  iplanner.h  trj_config.h  trj_const.h  trj_debug.cpp  trj_debug.h  trj_move.cpp  trj_move.h  trj_types.cpp  trj_types.h  trj_util.cpp  trj_util.h  try_types.cpp
messageprocessor/: CMakeLists.txt  messageprocessor.cpp  messageprocessor.h
messageprocessor/test/: CMakeLists.txt  test.cpp
mock/: Arduino.h  FastCRC.h  PacketSerial.h
notebooks/: CPPTest.ipynb
notebooks/.ipynb_checkpoints/: CPPTest-checkpoint.ipynb
planner/: CMakeLists.txt  Hardware.cpp  Hardware.h  block.cpp  block.h  const.h  debug.cpp  joint.h  messageprocessor.cpp  messageprocessor.h  move.h  planner.cpp  planner.h  planner_types.h  segment.h  stepper.cpp  stepper.h  trj_block.cpp  trj_block.h  trj_joint.h  trj_jointss.h  trj_segment.cpp  trj_segment.h  types.cpp  util.cpp
planner/FastCRC/src/: FastCRC.h
planner/cli/: CMakeLists.txt  planner.cpp  stepper.cpp
planner/test/: CMakeLists.txt  test.cpp  test_basic.cpp  test_block.cpp  test_lib.cpp  test_loop.cpp  test_mp.cpp  test_planner.cpp  test_segment.cpp  test_stepper.cpp
python/pytplan/trajectory/: messages.py  proto.py
python/pytplan/trajectory/test/: test_complex.py  test_prod.py  test_serial.py
python/trajectory/test/: CPPTest.ipynb
src/: CMakeLists.txt  make_build_system.sh
src/FastCRC/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/planner/: CMakeLists.txt  Hardware.cpp  Hardware.h  block.cpp  block.h  config.h  const.h  debug.cpp  debug.h  ipacketserial.h  joint.cpp  joint.h  json.hpp  loop.cpp  loop.h  messageprocessor.cpp  messageprocessor.h  move.cpp  planner.cpp  planner.h  segment.cpp  segment.h  stepper.cpp  stepper.h  types.cpp  types.h  util.cpp  util.h
src/test/: CMakeLists.txt  test.h  test_lib.cpp  test_stepper.cpp
src/test/devel/: CMakeLists.txt  test.cpp  test_blink.cpp  test_misc.cpp  test_stepper.cpp
src/test/notebooks/: CPPTest.ipynb  JogTest.ipynb  cpptest.py  testlib.py
src/test/notebooks/.ipynb_checkpoints/: CPPTest-checkpoint.ipynb  cpptest-checkpoint.py  startup-checkpoint.py
src/test/system/: CMakeLists.txt  planner.cpp  stepper.cpp
src/test/unit/: CMakeLists.txt  test_block.cpp  test_loop.cpp  test_planner.cpp  test_segment.cpp  test_stepper.cpp
teensy/: CMakeLists.txt  CMakeListsUser.txt  README.md  platformio.ini
teensy/lib/Hardware/: TargetHardware.cpp  TargetHardware.h  TargetPacketSerial.cpp  TargetPacketSerial.h  target.cpp  target.h
teensy/lib/PacketSerial/src/: PacketSerial.h
teensy/lib/PacketSerial/src/Encoding/: COBS.h  SLIP.h
teensy/src/: main.cpp  usbname.c
teensy/test/test_planner/: main.cpp
test/system/: CMakeLists.txt
test/unit/: CMakeLists.txt  test.h  test_block.cpp  test_lib.cpp  test_misc.cpp  test_planner.cpp  test_stepper.cpp
